# vidEdit

./: .gitignore  LICENSE  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  videdit_updater.key.pub  vite.config.ts
.github/workflows/: release.yml
docs/: DESIGN.md
src/: exportui.ts  ipc.ts  main.ts  mediabin.ts  mosaicui.ts  preview.ts  state.ts  style.css  timeline.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detect.rs  export.rs  ffmpeg.rs  lib.rs  main.rs  media.rs  project.rs
