[package]
name = "videdit"
version = "0.2.0"
description = "A lightweight video editor"
authors = ["dikmri"]
edition = "2021"

[lib]
name = "videdit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Pure-Rust ONNX inference for auto-mosaic detection (no native deps, CI-safe on 3 OSes).
tract-onnx = "0.21"
# Must match tract-onnx's prost (ONNX proto surgery in detect.rs::sanitize_onnx)
prost = "0.11"
# Blocking HTTP for one-shot model download. default-features off keeps OpenSSL out;
# the "tls" feature pulls rustls (already in the tree via tauri).
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
